log
Thu 21 Mar 2024 06:53:27 PM UTC: 
 tests:  0|5
total_score: 0/70
d4d68a1
Thu 21 Mar 2024 07:09:19 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:82:4: error: expected statement before ‘)’ token
   82 |   })
      |    ^
Compilation failed
f92e039
